Changes from jTDS 1.2.7
=======================

01/25/2013 - Holger Rehn
 o Added test for JDBC date/time escapes used in a procedure call.

12/24/2012 - Holger Rehn
 o Added test for bug #686, SQL error invalidates a Statement's internal state.
 o Fixed bug #626 by added a type mapping for java.math.BigInteger.

12/19/2012 - Holger Rehn
 o Applied fix for MSSQL 2000 compatibility provided by Andrew Fink (bug #683).

11/15/2012 - Holger Rehn
 o Fixed bug #552, jTDS fails to find an SQL Server instance if the discovery
   requests' response is plit into multiple network packets.

10/28/2012 - Holger Rehn
 o Added test for bug #575, parameter types not available via ParameterMetaData.
 o Fixed build scripts, Maven artifacts are no included in the distro package.

===============================================================================
10/27/2012 - jTDS 1.2.7 released
===============================================================================

Changes from jTDS 1.2.6
=======================

10/26/2012 - Holger Rehn
 o Added test for bug #638, preparedStatement.setTimestamp sets seconds to 0.
 o Added test for bug #644, updateNull not working with MSSQL DECIMAL field.
 o Added test for bug #500, Statement.execute() fails if using cursors and
   SHOWPLAN_ALL is set to ON.
 o Fixed bug #528, any ResultSet gets dropped when using RETURN_GENERATED_KEYS.
 o A ResultSet returned by Statement.getGeneratedKeys() is no longer updatable.
 o Improved the database meta data by adding (JDBC4) column IS_AUTOINCREMENT.

10/25/2012 - Holger Rehn
 o Removed unnecessary console logging from various unit tests.
 o Improved overall driver performance by avoiding blocking (and potentially
   slow) lookup of virtual data streams, required for any request/response.

10/24/2012 - Holger Rehn
 o Fixed a bug that caused Statement.close() to throw an exception for errors
   caused by previously executed SQL statements.
 o Added unit tests for bugs #473 and #635.
